tests/ui/const-generics/mgca/dyn-non-type-assoc-const-binding.stderr
error: use of trait associated const not defined as `type const`
  --> $DIR/dyn-non-type-assoc-const-binding.rs:12:22
   |
LL | fn foo(_: &dyn Trait<ASSOC = 10>) {}
   |                      ^^^^^^^^^^
   |
   = note: the declaration in the trait must begin with `type const` not just `const` alone

error: use of trait associated const not defined as `type const`
  --> $DIR/dyn-non-type-assoc-const-binding.rs:12:22
   |
LL | fn foo(_: &dyn Trait<ASSOC = 10>) {}
   |                      ^^^^^^^^^^
   |
   = note: the declaration in the trait must begin with `type const` not just `const` alone
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: use of trait associated const not defined as `type const`
  --> $DIR/dyn-non-type-assoc-const-binding.rs:12:22
   |
LL | fn foo(_: &dyn Trait<ASSOC = 10>) {}
   |                      ^^^^^^^^^^
   |
   = note: the declaration in the trait must begin with `type const` not just `const` alone
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/dyn-non-type-assoc-const-binding.rs:12:12
   |
LL | fn foo(_: &dyn Trait<ASSOC = 10>) {}
   |            ^^^^^^^^^^^^^^^^^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-non-type-assoc-const-binding.rs:9:11
   |
LL | trait Trait {
   |       ----- this trait is not dyn compatible...
LL |     const ASSOC: usize;
   |           ^^^^^ ...because it contains associated const `ASSOC` that's not defined as `type const`
   = help: consider moving `ASSOC` to another trait

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0038`.
